[core] fix(TagInput): make sure ResizableInput span is invisible (#5997)

--- a/packages/core/src/components/tag-input/_resizable-input.scss
+++ b/packages/core/src/components/tag-input/_resizable-input.scss
@@ -5,6 +5,8 @@
   max-height: 0;
   max-width: 100%;
   min-width: $pt-grid-size * 8;
+  opacity: 0;
+  overflow: hidden;
   position: absolute;
   white-space: nowrap;
   z-index: -1;
